[package]
name = "zoom-lomax"
version = "0.2.0"
authors = ["John Levon <levon@movementarian.org>"]
edition = "2018"

[profile.dev]
panic = "abort"

[dependencies]
chrono = "0.4"
chrono-tz = "0.4"
clap = "2.33.0"
dirs = "1.0.0"
failure = "0.1.5"
failure_derive = "0.1.5"
lettre = "0.9"
lettre_email = "0.9"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
