[package]
name = "zoom-lomax"
version = "0.2.0"
description = "Download Zoom recordings"
authors = [ "John Levon <levon@movementarian.org>" ]
readme = "README.md"
keywords = [ "zoom"  ]
repository = "https://github.com/jlevon/zoom-lomax"
edition = "2018"
license = "MIT"

[profile.dev]
panic = "abort"

[profile.release]
overflow-checks = true
debug = true
panic = 'abort'

[dependencies]
chrono = "0.4"
chrono-tz = "0.4"
clap = "2.33.0"
dirs = "1.0.0"
env_logger = "0.6.1"
failure = "0.1.5"
failure_derive = "0.1.5"
lettre = "0.9"
lettre_email = "0.9"
log = "0.4.6"
reqwest = "0.9"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
