[package]
name = "zoom-lomax"
version = "0.4.0"
description = "Download Zoom recordings"
authors = [ "John Levon <levon@movementarian.org>" ]
readme = "README.md"
keywords = [ "zoom" ]
repository = "https://github.com/jlevon/zoom-lomax"
edition = "2018"
license = "MIT"

[badges]
travis-ci = { repository = "jlevon/zoom-lomax" }

[profile.dev]
panic = "abort"

[profile.release]
overflow-checks = true
debug = true
panic = "abort"

[dependencies]
chrono = "0.4"
chrono-tz = "0.4"
dirs = "1.0.0"
env_logger = "0.6.1"
failure = "0.1.5"
failure_derive = "0.1.5"
jsonwebtoken = "6"
lambda_runtime = "^0.2"
lettre = "0.9"
lettre_email = "0.9"
log = "^0.4"
reqwest = "0.9"
rusoto_core = "0.42.0"
rusoto_ses = "0.42.0"
rusoto_ssm = "0.42.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
structopt = "0.2"
